atualizações de css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,9 +7,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Sistema de Indicação</h1>
 
+  <h1>Sistema de Indicação</h1>
+
+  <div class="conteudo">
+      <div class="container">
+    
     <div id="register-section">
       <h2>Cadastro</h2>
       <form id="registerForm">
@@ -28,6 +31,7 @@
       <p>Seu link de indicação: <span id="profile-link"></span></p>
       <button id="copyBtn">Copiar Link</button>
     </div>
+  </div>
   </div>
 
   <script src="script.js"></script>
