--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sistema de Indicação</title>
+  <link rel="icon" type="image/png" sizes="16x16" href="../imagens/conexao.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
